Update JavaFX experiments w/WebView & MediaPlayer